[package]
name = "accelerometer-test"
version = "0.1.1"
authors = ["David Haig <david@ninjametal.com>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.13"
cortex-m = "0.7.2"
embedded-hal = "0.2.5"
stm32f1xx-hal = { version = "0.7", features = ["stm32f103", "rt"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] } # this is for logging
accelerometer = "0.12.0"
lis2dw12 = { version = "0.1.2", features = ["out_f32"] }
# lis2dw12 = { path="../lis2dw12", features = ["out_f32"] }

# this allows debugging in release mode (otherwise you only see assembly)
[profile.release]
debug = true

# this makes the binary small enough to fit on the device while still being able to build and upload in debug mode
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

